# ComfyUI-deepsoch-toolkit

./: .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
src/deepsoch_toolkit/: __init__.py
src/deepsoch_toolkit/core/: __init__.py  branding.py  categories.py  io.py  paths.py
src/deepsoch_toolkit/data/presets/: styles.json
src/deepsoch_toolkit/nodes/: __init__.py
src/deepsoch_toolkit/nodes/image/: __init__.py  load_images.py
src/deepsoch_toolkit/nodes/prompt/: __init__.py  prompt_preset.py
src/deepsoch_toolkit/nodes/util/: __init__.py  get_set.py
web/: about.js  get_set.js  load_images.js  prompt_preset.js
workflow/: Transform-Image.json
