[project]
name = "comfyui-deepsoch-toolkit"
description = "DeepSoch Toolkit — a growing collection of custom nodes for ComfyUI (prompt presets, image utilities, samplers, and more)."
version = "0.1.0"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/deepsoch/ComfyUI-deepsoch-toolkit"

[tool.comfy]
PublisherId = "deepsoch"
DisplayName = "DeepSoch Toolkit"
Icon = ""
